[tool.poetry]
name = "qutils"
version = "0.1.0"
description = ""
authors = ["sdual <shr.nrht.0623@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.4.3"
numpy = "^1.23.0"
pandas = "^1.4.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.18.1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
yapf = "^0.32.0"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
